--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,7 +7,7 @@ AllCops:
     - Gemfile
     - '.kitchen/*'
     - 'vendor/*'
-AlignParameters:
+ParameterAlignment:
   Enabled: true
 Encoding:
   Enabled: false
@@ -17,8 +17,6 @@ Metrics/LineLength:
   Enabled: false
 Metrics/MethodLength:
   Max: 75
-BracesAroundHashParameters:
-  Enabled: true
 CyclomaticComplexity:
   Enabled: false
 GuardClause:
@@ -38,4 +36,6 @@ Metrics/BlockLength:
 AbcSize:
   Enabled: false
 Style/BlockComments:
+  Enabled: false
+InvalidPlatformHelper:
   Enabled: false
